--- a/Projeto.html
+++ b/Projeto.html
@@ -22,7 +22,7 @@
             <div id="hud">
                 <ul>
 
-                    <li>Iníco</li>
+                    <li> <a href="sobre.html">Início</a></li>
                     <li>Sobre</li>
                     <li>Regras</li>
                     <li>Desenvolvedores</li>
