--- a/sobre.html
+++ b/sobre.html
@@ -21,16 +21,25 @@
             <div id="hud">
                 <ul>
 
-                    <li>Iníco</li>
-                    <li>Sobre</li>
-                    <li>Regras</li>
-                    <li>Desenvolvedores</li>
+                    <li>
+                        Início
+                    </li>
+                    <li>
+                        Sobre
+                    </li>
+                    <li>
+                        Regras
+                    </li>
+                    <li>
+                        Desenvolvedores
+                    </li>
 
                 </ul>
             </div>
 
         </div>
     </header>
+    sdkaopskdosa
 </body>
 
 </html>
