--- a/botão.html
+++ b/botão.html
@@ -14,7 +14,6 @@
     <header>
 
         <div id="cabecalho">
-
             <div id="nome">
                 <h1>JOGO DA MEMÓRIA</h1>
             </div>
@@ -22,16 +21,21 @@
             <div id="hud">
                 <ul>
 
-                    <li> <a href="sobre.html">Início</a></li>
-                    <li>Sobre</li>
-                    <li>Regras</li>
-                    <li>Desenvolvedores</li>
+                    <li>
+                        <a href="index.html">Início</a> 
+                    </li>
+                    <li>
+                        <a href="sobre.html">Sobre</a>
+                    </li>
+                    <li>
+                        <a href="regras.html">Regras</a>
+                    </li>
+                    <li>
+                        <a href="desenvolvedores.html">Desenvolvedores</a>
+                    </li>
 
                 </ul>
             </div>
 
         </div>
     </header>
-</body>
-
-</html>
