--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
     <title>Jogo</title>
 
 </head>
+
 <body>
     <header>
 
         <div id="cabecalho">
-
             <div id="nome">
                 <h1>JOGO DA MEMÓRIA</h1>
             </div>
@@ -22,7 +22,7 @@
                 <ul>
 
                     <li>
-                        <a href="index.html">Início</a> 
+                        <a href="index.html">Início</a>
                     </li>
                     <li>
                         <a href="sobre.html">Sobre</a>
@@ -39,7 +39,24 @@
 
         </div>
     </header>
-    
+
+    <section id="inicio">
+
+        <h2>QUE TAL COMPETIR COM SEUS AMIGOS PRA VER QUEM TEM A MELHOR MEMÓRIA?
+            <BR>VENHA SE DIVERTIR NESSE JOGO CLÁSSICO DE MEMÓRIA
+            COMO O TABULEIRO
+            DE ANTIGAMENTE <br>
+            FAÇA COMPETIÇÕES TENTANDO FICAR NO RANKING MAIS
+            ALTO PRA PROVAR QUE VOCÊ PODE SE LEMBRAR DO ANIVERSÁRIO DELES HAHAHA</BR>
+        </h2>
+        <br>
+        <nav id="botaoIniciar">
+            
+            <a href="jogoFacil.html">COLOCAR BOTÃO</a>
+
+        </nav>
+
+    </section>
 </body>
 
 </html>
