--- a/jogoFacil.html
+++ b/jogoFacil.html
@@ -6,14 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="Assets/CSS/reset.css">
     <link rel="stylesheet" href="Assets/CSS/Styles.css">
-    <title>Jogo</title>
+    <link rel="stylesheet" href="Assets/CSS/jogo.css">
+    <title>Jogo da memória</title>
+
 
 </head>
+
 <body>
     <header>
 
         <div id="cabecalho">
-
             <div id="nome">
                 <h1>JOGO DA MEMÓRIA</h1>
             </div>
@@ -22,7 +24,7 @@
                 <ul>
 
                     <li>
-                        <a href="index.html">Início</a> 
+                        <a href="index.html">Início</a>
                     </li>
                     <li>
                         <a href="sobre.html">Sobre</a>
@@ -39,7 +41,18 @@
 
         </div>
     </header>
-    
+    <div class="grid">
+        <div class="cartas">
+            <div class="face front"></div>
+            <div class="face back"></div>
+        </div>
+
+        <div class="cartas">
+            <div class="face front"></div>
+            <div class="face back"></div>
+        </div>
+        
+    </div>
 </body>
 
 </html>
