Realizado jogo com só uma dificuldade

--- a/jogoFacil.html
+++ b/jogoFacil.html
@@ -7,12 +7,16 @@
     <link rel="stylesheet" href="Assets/CSS/reset.css">
     <link rel="stylesheet" href="Assets/CSS/Styles.css">
     <link rel="stylesheet" href="Assets/CSS/jogo.css">
+    <script defer src="/Assets/JS/jogo.js"></script>
     <title>Jogo da memória</title>
 
 
 </head>
 
 <body>
+
+
+
     <header>
 
         <div id="cabecalho">
@@ -39,20 +43,20 @@
                 </ul>
             </div>
 
+
         </div>
     </header>
-    <div class="grid">
-        <div class="cartas">
-            <div class="face front"></div>
-            <div class="face back"></div>
-        </div>
+        <main>
+            <span class="player">
 
-        <div class="cartas">
-            <div class="face front"></div>
-            <div class="face back"></div>
-        </div>
-        
+            </span>
+            <span>Tempo: <span class="timer">00</span></span>
+
+    
+    <div class="grid">
+
     </div>
+    </main>
 </body>
 
 </html>
