--- a/jogoFacil.html
+++ b/jogoFacil.html
@@ -46,16 +46,16 @@
 
         </div>
     </header>
-        <main>
+
+    <main>
+        <div class="tempo">
             <span class="player">
-
+                Gustavo
             </span>
-            <span>Tempo: <span class="timer">00</span></span>
-
-    
-    <div class="grid">
-
-    </div>
+            <span>TEMPO: <span class="timer">00</span></span>
+        </div>
+        <div class="grid">
+        </div>
     </main>
 </body>
 
