--- a/dificuldade.html
+++ b/dificuldade.html
@@ -6,22 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="Assets/CSS/reset.css">
     <link rel="stylesheet" href="Assets/CSS/Styles.css">
-    <link rel="stylesheet" href="Assets/CSS/jogo.css">
-    <script defer src="/Assets/JS/jogoFacil.js"></script>
-    <title>Jogo da memória</title>
-
+    <title>JOGO DA MEMÓRIA</title>
 
 </head>
 
 <body>
 
-
-
     <header>
 
         <div id="cabecalho">
             <div id="nome">
+
                 <h1>JOGO DA MEMÓRIA</h1>
+
             </div>
 
             <div id="hud">
@@ -43,20 +40,15 @@
                 </ul>
             </div>
 
-
         </div>
     </header>
 
-    <main>
-        <div class="tempo">
-            <span class="player">
-                Gustavo
-            </span>
-            <span>TEMPO: <span class="timer">150</span></span>
-        </div>
-        <div class="grid">
-        </div>
-    </main>
+
+    <a href="jogoFacil.html"><input class="botao_facil" type="button" value="Facíl"></a>
+    <a href="jogoMedio.html"><input class="botao_medio" type="button" value="Médio"></a>
+    <a href="jogoDificil.html"><input class="botao_dificil" type="button" value="Dificil"></a>
+
+
 </body>
 
 </html>
