--- a/jogoMedio.html
+++ b/jogoMedio.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="Assets/CSS/reset.css">
     <link rel="stylesheet" href="Assets/CSS/Styles.css">
     <link rel="stylesheet" href="Assets/CSS/jogo.css">
-    <script defer src="/Assets/JS/jogoFacil.js"></script>
+    <script defer src="/Assets/JS/jogoMedio.js"></script>
     <title>Jogo da memória</title>
 
 
@@ -52,7 +52,7 @@
             <span class="player">
                 Gustavo
             </span>
-            <span>TEMPO: <span class="timer">150</span></span>
+            <span>TEMPO: <span class="timer">90</span></span>
         </div>
         <div class="grid">
         </div>
