--- a/inicio.html
+++ b/inicio.html
@@ -6,17 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="Assets/CSS/reset.css">
     <link rel="stylesheet" href="Assets/CSS/Styles.css">
-    <link rel="stylesheet" href="Assets/CSS/jogo.css">
-    <script defer src="/Assets/JS/jogoFacil.js"></script>
-    <title>Jogo da memória</title>
-
+    <title>Jogo</title>
 
 </head>
 
 <body>
-
-
-
     <header>
 
         <div id="cabecalho">
@@ -43,20 +37,26 @@
                 </ul>
             </div>
 
-
         </div>
     </header>
 
-    <main>
-        <div class="tempo">
-            <span class="player">
-                Gustavo
-            </span>
-            <span>TEMPO: <span class="timer">150</span></span>
-        </div>
-        <div class="grid">
-        </div>
-    </main>
+    <section id="inicio">
+
+        <h2>QUE TAL COMPETIR COM SEUS AMIGOS PRA VER QUEM TEM A MELHOR MEMÓRIA?
+            <BR>VENHA SE DIVERTIR NESSE JOGO CLÁSSICO DE MEMÓRIA
+            COMO O TABULEIRO
+            DE ANTIGAMENTE <br>
+            FAÇA COMPETIÇÕES TENTANDO FICAR NO RANKING MAIS
+            ALTO PRA PROVAR QUE VOCÊ PODE SE LEMBRAR DO ANIVERSÁRIO DELES HAHAHA</BR>
+        </h2>
+        <br>
+        <nav id="botaoIniciar">
+            
+            <a href="dificuldade.html">COLOCAR BOTÃO</a>
+
+        </nav>
+
+    </section>
 </body>
 
 </html>
