Faltando fazer resto do cabecalho

--- a/dificuldade.html
+++ b/dificuldade.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="Assets/CSS/reset.css">
     <link rel="stylesheet" href="Assets/CSS/Styles.css">
+    <link rel="stylesheet" href="Assets/CSS/dificuldade.css">
     <title>JOGO DA MEMÓRIA</title>
 
 </head>
@@ -43,11 +44,14 @@
         </div>
     </header>
 
+    
+    <nav class="botoes">
 
-    <a href="jogoFacil.html"><input class="botao_facil" type="button" value="Facíl"></a>
-    <a href="jogoMedio.html"><input class="botao_medio" type="button" value="Médio"></a>
-    <a href="jogoDificil.html"><input class="botao_dificil" type="button" value="Dificil"></a>
+        <a href="jogoFacil.html" class="botao_facil"><input class="botao_facil" type="button" value="Facíl"></a>
+        <a href="jogoMedio.html" class="botao_medio"><input class="botao_medio" type="button" value="Médio"></a>
+        <a href="jogoDificil.html" class="botao_dificil"><input class="botao_dificil" type="button" value="Dificil"></a>
 
+    </nav>
 
 </body>
 
