--- a/inicio.html
+++ b/inicio.html
@@ -51,8 +51,8 @@
         </h2>
         <br>
         <nav id="botaoIniciar">
-            
-            <a href="dificuldade.html">COLOCAR BOTÃO</a>
+
+            <a href="dificuldade.html" id="botao_jogar"><input class="botao_jogar" type="button" value="JOGAR"></a>
 
         </nav>
 
