--- a/regras.html
+++ b/regras.html
@@ -22,7 +22,7 @@
                 <ul>
 
                     <li>
-                        <a href="index.html">Início</a> 
+                        <a href="inicio.html">Início</a> 
                     </li>
                     <li>
                         <a href="sobre.html">Sobre</a>
