Falta ajeitar pontos finais nos devs e placar

--- a/desenvolvedores.html
+++ b/desenvolvedores.html
@@ -10,32 +10,61 @@
 
 </head>
 
-<body>
-    <header>
 
-        <div id="cabecalho">
-            <div id="nome">
-                <h1>JOGO DA MEMÓRIA</h1>
-            </div>
 
-            <div id="hud">
-                <ul>
 
-                    <li>
-                        <a href="inicio.html">Início</a> 
-                    </li>
-                    <li>
-                        <a href="sobre.html">Sobre</a>
-                    </li>
-                    <li>
-                        <a href="regras.html">Regras</a>
-                    </li>
-                    <li>
-                        <a href="desenvolvedores.html">Desenvolvedores</a>
-                    </li>
-
-                </ul>
-            </div>
-
+<header>
+    <div id="cabecalho">
+        <div id="nome">
+            <h1>JOGO DA MEMÓRIA</h1>
         </div>
-    </header>
+
+        <div id="hud">
+            <ul>
+                <li>
+                    <a href="inicio.html">Início</a>
+                </li>
+                <li>
+                    <a href="sobre.html">Sobre</a>
+                </li>
+                <li>
+                    <a href="desenvolvedores.html">Desenvolvedores</a>
+                </li>
+            </ul>
+        </div>
+    </div>
+</header>
+
+<body>
+
+    <main>
+
+        <div class="desenvolvedores">
+            <h2>HELLO WORLD</h2>
+            <h3>Esse jogo foi desenvolvido por alunos do colégio ULBRA SÃO LUCAS, com a intuito de fazer um trabalho
+                sobre <br>
+                Projeto Aplicado a informática, cujo objetivo é fazer um jogo da memória relacionado a um código HTML,
+                JAVASCRIPT, CSS...
+                Os desenvolvedores se encontram abaixo.
+            </h3>
+        </div>
+
+        <div class="devs">
+    <ul>
+        <li class="devs-item">
+            <img src="/Assets/IMG/eu.png" alt="">
+            <a href="https://github.com/Gustavokvs" target="_blank">Gustavo Kruger</a>
+        </li>
+        <li class="devs-item">
+            <img src="/Assets/IMG/another_dev.png" alt="">
+            <a href="https://github.com/gabrielbock04" target="_blank">Gabriel Book</a>
+        </li>
+    </ul>
+</div>
+
+
+    </main>
+
+</body>
+
+</html>
