--- a/dificuldade.html
+++ b/dificuldade.html
@@ -11,47 +11,47 @@
 
 </head>
 
-<body>
+<header>
 
-    <header>
+    <div id="cabecalho">
+        <div id="nome">
 
-        <div id="cabecalho">
-            <div id="nome">
-
-                <h1>JOGO DA MEMÓRIA</h1>
-
-            </div>
-
-            <div id="hud">
-                <ul>
-
-                    <li>
-                        <a href="inicio.html">Início</a>
-                    </li>
-                    <li>
-                        <a href="sobre.html">Sobre</a>
-                    </li>
-                    <li>
-                        <a href="regras.html">Regras</a>
-                    </li>
-                    <li>
-                        <a href="desenvolvedores.html">Desenvolvedores</a>
-                    </li>
-
-                </ul>
-            </div>
+            <h1>JOGO DA MEMÓRIA</h1>
 
         </div>
-    </header>
 
-    
-    <nav class="botoes">
+        <div id="hud">
+            <ul>
 
-        <a href="jogoFacil.html" class="botao_facil"><input class="botao_facil" type="button" value="Facíl"></a>
-        <a href="jogoMedio.html" class="botao_medio"><input class="botao_medio" type="button" value="Médio"></a>
-        <a href="jogoDificil.html" class="botao_dificil"><input class="botao_dificil" type="button" value="Dificil"></a>
+                <li>
+                    <a href="inicio.html">Início</a>
+                </li>
+                <li>
+                    <a href="sobre.html">Sobre</a>
+                </li>
+                <li>
+                    <a href="desenvolvedores.html">Desenvolvedores</a>
+                </li>
 
-    </nav>
+            </ul>
+        </div>
+
+    </div>
+</header>
+
+<body>
+
+    <main>
+
+
+        <nav class="botoes">
+
+            <a href="jogoFacil.html" class="botao_facil"><input class="botao_facil" type="button" value="Facíl"></a>
+            <a href="jogoMedio.html" class="botao_medio"><input class="botao_medio" type="button" value="Médio"></a>
+            <a href="jogoDificil.html" class="botao_dificil"><input class="botao_dificil" type="button"  value="Dificil"></a>
+
+        </nav>
+    </main>
 
 </body>
 
