--- a/inicio.html
+++ b/inicio.html
@@ -10,53 +10,53 @@
 
 </head>
 
-<body>
-    <header>
+<header>
 
-        <div id="cabecalho">
-            <div id="nome">
-                <h1>JOGO DA MEMÓRIA</h1>
-            </div>
-
-            <div id="hud">
-                <ul>
-
-                    <li>
-                        <a href="inicio.html">Início</a>
-                    </li>
-                    <li>
-                        <a href="sobre.html">Sobre</a>
-                    </li>
-                    <li>
-                        <a href="regras.html">Regras</a>
-                    </li>
-                    <li>
-                        <a href="desenvolvedores.html">Desenvolvedores</a>
-                    </li>
-
-                </ul>
-            </div>
-
+    <div id="cabecalho">
+        <div id="nome">
+            <h1>JOGO DA MEMÓRIA</h1>
         </div>
-    </header>
 
-    <section id="inicio">
+        <div id="hud">
+            <ul>
 
-        <h2>QUE TAL COMPETIR COM SEUS AMIGOS PRA VER QUEM TEM A MELHOR MEMÓRIA?
-            <BR>VENHA SE DIVERTIR NESSE JOGO CLÁSSICO DE MEMÓRIA
-            COMO O TABULEIRO
-            DE ANTIGAMENTE <br>
-            FAÇA COMPETIÇÕES TENTANDO FICAR NO RANKING MAIS
-            ALTO PRA PROVAR QUE VOCÊ PODE SE LEMBRAR DO ANIVERSÁRIO DELES HAHAHA</BR>
-        </h2>
-        <br>
-        <nav id="botaoIniciar">
+                <li>
+                    <a href="inicio.html">Início</a>
+                </li>
+                <li>
+                    <a href="sobre.html">Sobre</a>
+                </li>
+                <li>
+                    <a href="desenvolvedores.html">Desenvolvedores</a>
+                </li>
 
-            <a href="dificuldade.html" id="botao_jogar"><input class="botao_jogar" type="button" value="JOGAR"></a>
+            </ul>
+        </div>
 
-        </nav>
+    </div>
+</header>
 
-    </section>
+<body>
+    <main>
+
+        <section id="inicio">
+
+            <h2>QUE TAL COMPETIR COM SEUS AMIGOS PRA VER QUEM TEM A MELHOR MEMÓRIA?
+                <BR>VENHA SE DIVERTIR NESSE JOGO CLÁSSICO DE MEMÓRIA
+                COMO O TABULEIRO
+                DE ANTIGAMENTE <br>
+                FAÇA COMPETIÇÕES TENTANDO FICAR NO RANKING MAIS
+                ALTO PRA PROVAR QUE VOCÊ PODE SE LEMBRAR DO ANIVERSÁRIO DELES HAHAHA</BR>
+            </h2>
+            <br>
+            <nav id="botaoIniciar">
+
+                <a href="dificuldade.html" id="botao_jogar"><input class="botao_jogar" type="button" value="JOGAR"></a>
+
+            </nav>
+
+        </section>
+    </main>
 </body>
 
 </html>
