--- a/sobre.html
+++ b/sobre.html
@@ -9,37 +9,58 @@
     <title>Jogo</title>
 
 </head>
-<body>
-    <header>
 
-        <div id="cabecalho">
+<header>
 
-            <div id="nome">
-                <h1>JOGO DA MEMÓRIA</h1>
-            </div>
+    <div id="cabecalho">
 
-            <div id="hud">
-                <ul>
-
-                    <li>
-                        <a href="inicio.html">Início</a> 
-                    </li>
-                    <li>
-                        <a href="sobre.html">Sobre</a>
-                    </li>
-                    <li>
-                        <a href="regras.html">Regras</a>
-                    </li>
-                    <li>
-                        <a href="desenvolvedores.html">Desenvolvedores</a>
-                    </li>
-
-                </ul>
-            </div>
-
+        <div id="nome">
+            <h1>JOGO DA MEMÓRIA</h1>
         </div>
-    </header>
+
+        <div id="hud">
+            <ul>
+
+                <li>
+                    <a href="inicio.html">Início</a>
+                </li>
+                <li>
+                    <a href="sobre.html">Sobre</a>
+                </li>
+                <li>
+                    <a href="desenvolvedores.html">Desenvolvedores</a>
+                </li>
+
+            </ul>
+        </div>
+
+    </div>
+</header>
+
+<body>
+
     
+    <main>
+
+        <div class="sobre">
+            <h2>Sabe o que fazer?</h2>
+            <h3> Esse jogo da memória com a temática de Super Mário é incrivel!!
+                <br><br>Na verdade as regras são bem simples, se você já jogou uma vez na vida jogo da memória sabe como
+                funciona
+                correto? <br><br>
+                Mas para aqueles que nunca jogaram eu dou uma breve explicação, o jogo tem cartas que estão de face para
+                baixo, você tem que vira-las e encontrar seu par, cada uma tem o seu próprio par, caso você erre, as
+                cartas
+                virarão do avesso novamente, caso acerte as cartas ficarão de face para cima e não podem mais ser
+                selecionadas. Vire todas as cartas na mesa para conseguir vencer!!!! <br><br>
+                Porém este jogo tem um desafio, CORRA contra o tempo para conseguir desvendar as cartas antes do
+                cronometro
+                chegar a ZERO, com um adicional que tem um placar, deixando assim mais emocionante, será que consegue
+                pontuar mais que os outros???
+            </h3>
+        </div>
+    </main>
+
 </body>
 
 </html>
