--- a/desenvolvedores.html
+++ b/desenvolvedores.html
@@ -21,15 +21,17 @@
 
         <div id="hud">
             <ul>
+
                 <li>
-                    <a href="inicio.html">Início</a>
+                    <a href="./inicio.html">Início</a>
                 </li>
                 <li>
-                    <a href="sobre.html">Sobre</a>
+                    <a href="./sobre.html">Sobre</a>
                 </li>
                 <li>
-                    <a href="desenvolvedores.html">Desenvolvedores</a>
+                    <a href="./desenvolvedores.html">Desenvolvedores</a>
                 </li>
+
             </ul>
         </div>
     </div>
@@ -50,17 +52,17 @@
         </div>
 
         <div class="devs">
-    <ul>
-        <li class="devs-item">
-            <img src="/Assets/IMG/eu.png" alt="">
-            <a href="https://github.com/Gustavokvs" target="_blank">Gustavo Kruger</a>
-        </li>
-        <li class="devs-item">
-            <img src="/Assets/IMG/another_dev.png" alt="">
-            <a href="https://github.com/gabrielbock04" target="_blank">Gabriel Book</a>
-        </li>
-    </ul>
-</div>
+            <ul>
+                <li class="devs-item">
+                    <img src="/Assets/IMG/eu.png" alt="">
+                    <a href="https://github.com/Gustavokvs" target="_blank">Gustavo Kruger</a>
+                </li>
+                <li class="devs-item">
+                    <img src="/Assets/IMG/another_dev.png" alt="">
+                    <a href="https://github.com/gabrielbock04" target="_blank">Gabriel Book</a>
+                </li>
+            </ul>
+        </div>
 
 
     </main>
