--- a/jogoFacil.html
+++ b/jogoFacil.html
@@ -25,13 +25,13 @@
             <ul>
 
                 <li>
-                    <a href="inicio.html">Início</a>
+                    <a href="./inicio.html">Início</a>
                 </li>
                 <li>
-                    <a href="sobre.html">Sobre</a>
+                    <a href="./sobre.html">Sobre</a>
                 </li>
                 <li>
-                    <a href="desenvolvedores.html">Desenvolvedores</a>
+                    <a href="./desenvolvedores.html">Desenvolvedores</a>
                 </li>
 
             </ul>
