--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <form class="login-form">
         <div class="login">
-            <img src="Assets/IMG/login.png" alt="">
+            <img src="./Assets/IMG/login.png" alt="">
             <h1> Diga seu nome</h1>
             <p>Você precisa informar para jogar.</p>
             <div class="dadosEBotao">
