--- a/dificuldade.html
+++ b/dificuldade.html
@@ -27,7 +27,7 @@
                     <a href="./inicio.html">Início</a>
                 </li>
                 <li>
-                    <a href="./sobre.html">Sobre</a>
+                    <a href="../sobre.html">Sobre</a>
                 </li>
                 <li>
                     <a href="./desenvolvedores.html">Desenvolvedores</a>
