--- a/desenvolvedores.html
+++ b/desenvolvedores.html
@@ -54,7 +54,7 @@
         <div class="devs">
             <ul>
                 <li class="devs-item">
-                    <img src="../Assets/IMG/eu.png" alt="">
+                    <img src="./Assets/IMG/eu.png" alt="">
                     <a href="https://github.com/Gustavokvs" target="_blank">Gustavo Kruger</a>
                 </li>
                 <li class="devs-item">
