--- a/jogoFacil.html
+++ b/jogoFacil.html
@@ -4,11 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="Assets/CSS/reset.css">
-    <link rel="stylesheet" href="Assets/CSS/Styles.css">
-    <link rel="stylesheet" href="Assets/CSS/jogo.css">
+    <link rel="stylesheet" href="../Assets/CSS/resetJogo.css">
+    <link rel="stylesheet" href="../Assets/CSS/Styles.css">
+    <link rel="stylesheet" href="../Assets/CSS/jogo.css">
     <script defer src="/Assets/JS/jogoFacil.js"></script>
-  
+
     <title>Jogo da memória</title>
 
 
@@ -44,8 +44,6 @@
 <body>
 
 
-
-
     <main>
         <div class="tempo">
             <span class="player">
@@ -56,10 +54,7 @@
         <div class="grid">
         </div>
     </main>
-    <main>
-        <div id="pontuacao">Pontuação: 0</div>
-        <script src="/Assets/JS/pontuacao.js"></script> 
-    </main>
+
 </body>
 
 </html>
