--- a/sobre.html
+++ b/sobre.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="Assets/CSS/resetJogo.css">
-    <link rel="stylesheet" href="Assets/CSS/Styles.css">
+    <link rel="stylesheet" href="./Assets/CSS/resetJogo.css">
+    <link rel="stylesheet" href="./Assets/CSS/Styles.css">
     <title>Jogo</title>
 
 </head>
