--- a/jogoFacil.html
+++ b/jogoFacil.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./Assets/CSS/resetJogo.css">
-    <link rel="stylesheet" href="./Assets/CSS/Styles.css">
-    <link rel="stylesheet" href="./Assets/CSS/jogo.css">
+    <link rel="stylesheet" href="Assets/CSS/resetJogo.css">
+    <link rel="stylesheet" href="Assets/CSS/Styles.css">
+    <link rel="stylesheet" href="Assets/CSS/jogo.css">
     <script defer src="/Assets/JS/jogoFacil.js"></script>
 
     <title>Jogo da memória</title>
