--- a/jogoDificil.html
+++ b/jogoDificil.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="Assets/CSS/resetJogo.css">
     <link rel="stylesheet" href="Assets/CSS/Styles.css">
     <link rel="stylesheet" href="Assets/CSS/jogo.css">
-    <script defer src="/Assets/JS/jogoDificil.js"></script>
+    <script defer src="Assets/JS/jogoDificil.js"></script>
     <title>Jogo da memória</title>
 
 
