--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./Assets/CSS/reset.css">
+    <link rel="stylesheet" href="./Assets/CSS/resetJogo.css">
     <link rel="stylesheet" href="./Assets/CSS/login.css">
     <script defer src="./Assets/JS/login.js"> </script>
     <title>JOGO DA MEMÓRIA</title>
