Arrumado caminhos, faltando ajeitar css dos desenvolvedores e placar

--- a/desenvolvedores.html
+++ b/desenvolvedores.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="Assets/CSS/reset.css">
+    <link rel="stylesheet" href="Assets/CSS/resetJogo.css">
     <link rel="stylesheet" href="Assets/CSS/Styles.css">
     <title>Jogo</title>
 
@@ -58,8 +58,8 @@
                     <a href="https://github.com/Gustavokvs" target="_blank">Gustavo Kruger</a>
                 </li>
                 <li class="devs-item">
-                    <img src="/Assets/IMG/another_dev.png" alt="">
-                    <a href="https://github.com/gabrielbock04" target="_blank">Gabriel Book</a>
+                    <img src="./Assets/IMG/Gabriel.jpg" alt="">
+                    <a href="https://github.com/gabrielbock04" target="_blank">Gabriel Bock</a>
                 </li>
             </ul>
         </div>
