--- a/jogoDificil.html
+++ b/jogoDificil.html
@@ -53,8 +53,11 @@
             </span>
             <span>TEMPO: <span class="timer">30</span></span>
         </div>
+        <div class="score">Pontuação: 0</div>
+        <br>
         <div class="grid">
         </div>
+
     </main>
 </body>
 
