--- a/jogoFacil.html
+++ b/jogoFacil.html
@@ -51,6 +51,8 @@
             </span>
             <span>TEMPO: <span class="timer">150</span></span>
         </div>
+        <div class="score">Pontuação: 0</div>
+        <br>
         <div class="grid">
         </div>
     </main>
