--- a/jogoMedio.html
+++ b/jogoMedio.html
@@ -52,8 +52,11 @@
             </span>
             <span>TEMPO: <span class="timer">90</span></span>
         </div>
+        <div class="score">Pontuação: 0</div>
+        <br>
         <div class="grid">
         </div>
+
     </main>
 </body>
 
